--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+@import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 
 /*@import url(iconfont/material-icons.css);*/
 
 @import url(https://fonts.googleapis.com/css?family=Black+Ops+One);
-@import url(http://fonts.googleapis.com/earlyaccess/hanna.css);
+@import url(https://fonts.googleapis.com/earlyaccess/hanna.css);
 
 /*@import url(style_card.css);*/
 
