--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ footer {
 section {
   height: 100%;
   text-align: center;
+  display: inline-flex;
 }
 
 .item {
@@ -73,7 +74,7 @@ section {
   margin: 1em .5em;
   text-align: center;
   width: 128px;
-  height: 128px;
+  height: 160px;
 }
 
 .item a {
@@ -81,7 +82,10 @@ section {
 }
 
 .item img {
+  max-width: 128px;
+  max-height: 128px;
   width: 100%;
+  height: 100%;
 }
 
 .item p {
