--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-@import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
-@import url(https://fonts.googleapis.com/icon?family=Material+Icons);
-/*@import url(iconfont/material-icons.css);*/
-@import url(https://fonts.googleapis.com/css?family=Black+Ops+One);
-@import url(https://fonts.googleapis.com/earlyaccess/hanna.css);
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
 /*@import url(style_card.css);*/
 body {
@@ -79,6 +75,7 @@ section {
 
 .item a {
   width: 100%;
+  height: 100%;
 }
 
 .item img {
