--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+@import url('style_theme.css');
 
 /*@import url(style_card.css);*/
 body {
@@ -33,7 +34,7 @@ header, footer {
   padding: .25em 0 .5em;
   word-spacing: 1em;
   letter-spacing: .25em;
-  background: rgb(131, 140, 148);
+  /* background: rgb(131, 140, 148); */
   color: #f8f8ff;
   text-shadow:
     0px 1px 1px #ddd,
@@ -60,20 +61,38 @@ footer {
 }
 
 section {
+  width: 100%;
   height: 100%;
+  min-height: 200px;
   text-align: center;
   display: inline-block;
+  position: relative;
 }
 
 .item {
   display: inline-block;
   margin: 1em .5em;
   text-align: center;
-  width: 128px;
+  width: 200px;
+  left: calc(50% - 100px);
+  height: 316px;
+  /* background: gold; */
+  border-radius: 10px;
+  box-shadow: 2px 0px 5px rgba(0, 0, 0, .25);
+  transition: .5s;
+  position: absolute;
+  transform-origin: 50% 700%;
+}
+
+.item:hover {
+  margin-top: -50px;
+  box-shadow: 7px 0px 10px rgba(0, 0, 0, .25);
 }
 
 .item a {
   width: 100%;
+  height: 100%;
+  color: #fff;
 }
 
 .item img {
@@ -93,6 +112,14 @@ section {
 
 .item p span {
   text-transform: none;
+}
+
+.item .since {
+  position: absolute;
+  top: 8px;
+  right: 12px;
+  opacity: .75;
+  font-size: .75em
 }
 
 #title {
@@ -126,6 +153,7 @@ img.margin0 {
 
   section {
     text-align: left;
+    min-height: 0;
   }
 
   header, footer {
@@ -135,9 +163,24 @@ img.margin0 {
   .item {
     width: 20vw;
     margin: 1em 2vw;
+    height: 20vw;
+    background: none;
+    border-radius: 0;
+    box-shadow: none;
+    transition: 0;
+    position: static;
+    transform-origin: 0 0;
+  }
+
+  .item a {
+    color: #000;
   }
 
   .item p {
+    display: none;
+  }
+
+  .item .since {
     display: none;
   }
 
