--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Damion&display=swap');
 @import url('style_theme.css');
 
 /*@import url(style_card.css);*/
 body {
   text-align: center;
-  background: #e5e5e5;
+  /* background: #e5e5e5; */
   font-family: 'Noto Sans KR', sans-serif;
   color: rgba(0, 0, 0, .87);
   margin: 8em 0;
@@ -27,33 +28,18 @@ a:hover {
 }
 
 header, footer {
-  font-size: 3em;
-  width: 100%;
-  position: fixed;
   line-height: 1;
-  padding: .25em 0 .5em;
-  word-spacing: 1em;
-  letter-spacing: .25em;
-  /* background: rgb(131, 140, 148); */
-  color: #f8f8ff;
-  text-shadow:
-    0px 1px 1px #ddd,
-    0px 2px 1px #d6d6d6,
-    0px 3px 1px #ccc,
-    0px 4px 1px #c5c5c5,
-    0px 5px 1px #c1c1c1,
-    0px 6px 1px #bbb,
-    0px 7px 1px #777,
-    0px 8px 3px rgba(91, 106, 106, 0.9),
-    0px 9px 5px rgba(91, 106, 106, 0.8),
-    0px 10px 7px rgba(91, 106, 106, 0.7),
-    0px 11px 9px rgba(91, 106, 106, 0.6),
-    0px 12px 11px rgba(91, 106, 106, 0.5),
-    0px 13px 15px rgba(91, 106, 106, 0.4);
 }
 
 header {
+  position: fixed;
   top: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  margin-top: 3em;
+  font-size: 2em;
+  font-family: 'Damion', cursive;
 }
 
 footer {
@@ -62,31 +48,31 @@ footer {
 
 section {
   width: 100%;
-  height: 100%;
+  height: fit-content;
   min-height: 200px;
   text-align: center;
   display: inline-block;
   position: relative;
+  position: fixed;
+  left: 0;
+  top: 50%;
+}
+
+.info {
+  position: fixed;
+  width: 100%;
 }
 
 .item {
   display: inline-block;
   margin: 1em .5em;
   text-align: center;
-  width: 200px;
+  height: 200px;
+  width: 316px;
   left: calc(50% - 100px);
-  height: 316px;
-  /* background: gold; */
-  border-radius: 10px;
-  box-shadow: 2px 0px 5px rgba(0, 0, 0, .25);
-  transition: .5s;
+  transition: .25s;
   position: absolute;
   transform-origin: 50% 700%;
-}
-
-.item:hover {
-  margin-top: -50px;
-  box-shadow: 7px 0px 10px rgba(0, 0, 0, .25);
 }
 
 .item a {
@@ -122,6 +108,82 @@ section {
   font-size: .75em
 }
 
+.card {
+  width: 100%;
+  height: 100%;
+  transform: rotate(-90deg);
+  border-radius: 10px;
+  position: absolute;
+  background: #444;
+  box-shadow: -2px 0px 5px rgba(0, 0, 0, .25);
+  cursor: pointer;
+}
+
+/*
+.card:hover {
+  margin-top: -50px;
+  box-shadow: 7px 0px 10px rgba(0, 0, 0, .25);
+} */
+.card .title {
+  color: #fff;
+  left: 32px;
+  position: absolute;
+  top: calc(50% + 1em);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 1em;
+  width: 250px;
+  text-align: left;
+}
+
+.card .icon {
+  /* background: gold; */
+  /* border:1px solid white; */
+  width: 32px;
+  height: 32px;
+  left: 34px;
+  position: absolute;
+  top: calc(50% - 16px);
+}
+
+.card .arrow {
+  color: #fff;
+  left: 12px;
+  position: absolute;
+  top: calc(50% - 1em);
+}
+
+.item.qualify .title, .item.qualify .date, .item.qualify .url, .item.qualify .arrow {
+  color: #212121;
+}
+
+.card .date {
+  position: absolute;
+  width: 100px;
+  left: 200px;
+  text-align: left;
+  color: #fff;
+  font-size: .75em;
+  top: calc(50% + 40px);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.card .url {
+  position: absolute;
+  width: 120px;
+  left: 32px;
+  text-align: left;
+  color: #fff;
+  font-size: .75em;
+  top: calc(50% + 40px);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 #title {
   text-align: center;
   font-size: 10em;
@@ -138,6 +200,18 @@ img.margin0 {
   border-radius: .5em;
   width: calc(128px - 24px);
   height: calc(128px - 24px);
+}
+
+.spoiler {
+  color: transparent !important;
+  background: #000;
+  cursor: not-allowed;
+}
+
+.spoiler::selection {
+  color: transparent !important;
+  background: #000;
+  cursor: not-allowed;
 }
 
 @media handheld, only screen and (max-device-width:480px), only screen and (max-device-width:320px), screen and (max-width:600px) {
@@ -158,34 +232,5 @@ img.margin0 {
 
   header, footer {
     display: none;
-  }
-
-  .item {
-    width: 20vw;
-    margin: 1em 2vw;
-    height: 20vw;
-    background: none;
-    border-radius: 0;
-    box-shadow: none;
-    transition: 0;
-    position: static;
-    transform-origin: 0 0;
-  }
-
-  .item a {
-    color: #000;
-  }
-
-  .item p {
-    display: none;
-  }
-
-  .item .since {
-    display: none;
-  }
-
-  img.margin0 {
-    width: 16vw;
-    height: 16vw;
   }
 }
