--- a/style.css
+++ b/style.css
@@ -39,9 +39,11 @@ header {
   left: 0;
   width: 100%;
   text-align: center;
-  margin-top: 3em;
   font-size: 2em;
   font-family: 'Damion', cursive;
+  padding: 3em 0;
+  background: rgba(255, 255, 255, .75);
+  z-index: 2;
 }
 
 footer {
@@ -113,6 +115,13 @@ section {
   box-shadow: -2px 0px 5px rgba(0, 0, 0, .25);
   cursor: pointer;
   color: #fff;
+  transition: box-shadow .25s, margin .25s;
+}
+
+.item.on .card,
+.card:hover {
+  margin-top: -12px;
+  box-shadow: -5px 0px 11px rgba(0, 0, 0, .25);
 }
 
 /*
@@ -189,7 +198,7 @@ section {
 }
 
 .item.on .info,
-.item:hover .info {
+.card:hover .info {
   opacity: 1;
 }
 
