--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   /* background: #e5e5e5; */
   font-family: 'Noto Sans KR', sans-serif;
   color: rgba(0, 0, 0, .87);
-  margin: 8em 0;
+  margin: 0;
 }
 
 a {
@@ -251,23 +251,63 @@ img.margin0 {
   cursor: not-allowed;
 }
 
-@media handheld, only screen and (max-device-width:480px), only screen and (max-device-width:320px), screen and (max-width:600px) {
-  body {
-    margin: 0;
-    text-align: left;
-    overflow-x: hidden;
-  }
-
-  h2 {
-    text-align: center;
-  }
+@media handheld, only screen and (max-width:600px) {
+  body {}
 
   section {
-    text-align: left;
-    min-height: 0;
+    position: relative;
   }
 
   header, footer {
-    display: none;
+    position: static;
   }
+
+  .item {
+    position: relative;
+    left: calc(50% - 158px);
+  }
+
+  .card {
+    transform: rotate(0);
+  }
+
+  .info {
+    opacity: 0;
+  }
+}
+
+/* ------------------------------------------------------------------- */
+/* ***** splash ***** */
+/* ------------------------------------------------------------------- */
+div#splash {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: #fff;
+  text-align: center;
+  z-index: 99;
+  opacity: 1;
+}
+
+div#splash.off {
+  z-index: -1;
+  opacity: 0;
+  transition: 1s;
+}
+
+div#splash img {
+  top: calc(50% - 64px);
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+
+div#splash .splash_title {
+  top: calc(50% - 32px);
+  position: relative;
+  font-size: 1.25em;
+  font-weight: bold;
+  color: #aaa;
 }
