--- a/style_theme.css
+++ b/style_theme.css
@@ -49,3 +49,7 @@
 .jw {
   background: #424242;
 } */
+.instagram .card {
+  background: #d6249f !important;
+  background: radial-gradient(circle at 10% 90%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%) !important;
+}
