--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2??family=Noto+Sans+KR:wght@400;500;700;900&family=Noto+Serif+KR&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Damion&display=swap');
-@import url('style_theme.css');
 
 ::selection {
   background: rgba(0, 0, 0, 0);
