--- a/engine/style.css
+++ b/engine/style.css
@@ -60,8 +60,21 @@ section {
 
 .control {
   position: fixed;
+  cursor: default;
   bottom: 1em;
   right: 1em;
+}
+
+.control .sort {
+  cursor: pointer;
+  width: 24px;
+  height: 24px;
+  opacity: .3;
+  transition: .25s;
+}
+
+.control .sort:hover {
+  opacity: .5;
 }
 
 .item {
@@ -84,6 +97,9 @@ section {
 .card {
   width: 316px;
   height: 200px;
+  display: block;
+  padding: 0;
+  margin: 0;
   transform: rotate(-90deg);
   transform-origin: calc(50% - 29px) calc(50% + 29px);
   border-radius: 10px;
@@ -97,7 +113,7 @@ section {
 
 .item.on .card,
 .card:hover {
-  margin-top: -12px;
+  margin-block-start: -12px;
   box-shadow: -5px 0px 11px rgba(0, 0, 0, .25);
 }
 
