--- a/engine/style.css
+++ b/engine/style.css
@@ -1,5 +1,7 @@
+@charset "utf-8";
 @import url('https://fonts.googleapis.com/css2??family=Noto+Sans+KR:wght@400;500;700;900&family=Noto+Serif+KR&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Damion&display=swap');
+@import url('style_mobile.css');
 
 ::selection {
   background: rgba(0, 0, 0, 0);
@@ -249,57 +251,6 @@ img.margin0 {
   color: transparent !important;
   background: #000;
   cursor: not-allowed;
-}
-
-@media handheld, only screen and (max-width:1200px) {
-  body {
-    overflow-x: hidden;
-  }
-
-  section {
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  header, footer {
-    position: static;
-  }
-
-  .item {
-    position: relative;
-    left: 0;
-    width: 316px;
-    margin: 1em;
-  }
-
-  .control {
-    text-align: center;
-    position: static;
-    bottom: 1em;
-    right: 1em;
-  }
-
-  .card {
-    transform: rotate(0);
-  }
-
-  .info {
-    opacity: 0;
-  }
-
-  .item.on .card,
-  .card:hover {
-    margin-top: 0;
-  }
-
-  .item.on .info,
-  .card:hover .info {
-    opacity: 0;
-  }
 }
 
 /* ------------------------------------------------------------------- */
