--- a/engine/style_mobile.css
+++ b/engine/style_mobile.css
@@ -4,22 +4,30 @@ body.mobile {
 
 body.mobile section {
   position: relative;
-  overflow: hidden;
+  /* top: calc(50% - 100px); */
+  /* top: 0; */
+  bottom: calc(-200px + 6em);
+  /* overflow: hidden; */
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  padding-bottom: calc(50vh - 100px);
 }
 
-body.mobile header, body.mobile footer {
+body.mobile header,
+body.mobile footer {
   position: static;
 }
 
 body.mobile .item {
-  position: relative;
+  position: sticky;
   left: 0;
+  bottom: 0;
   width: 316px;
   margin: 1em;
+  perspective: 3000px;
+  transform-origin: 50% 45%;
 }
 
 body.mobile .control {
