--- a/engine/style.css
+++ b/engine/style.css
@@ -83,7 +83,7 @@ section {
   width: 200px;
   height: 200px;
   left: calc(50% - 100px);
-  transition: transform .5s;
+  transition: transform .5s, bottom .25s;
   position: absolute;
   /* transform-origin: 50% 700%; */
 }
