--- a/engine/style_theme.css
+++ b/engine/style_theme.css
@@ -67,6 +67,10 @@
   background: linear-gradient(to right, #35e5a0 0%, #35aae1 80%, #367aff 100%) !important;
 }
 
+.blackyak .card {
+   background: linear-gradient(to right, #00897B 0%, #00897B 30%, #00C853 100%) !important;
+}
+
 /*******************
  *     JW CARD     *
  *******************/
