--- a/engine/style.css
+++ b/engine/style.css
@@ -17,7 +17,7 @@ body {
 a {
   text-decoration: none;
   display: inline-block;
-  color: #000;
+  color: inherit;
   transition: .25s;
   padding: .5em .75em;
   margin: -0.75em -.75em;
