--- a/engine/style_theme.css
+++ b/engine/style_theme.css
@@ -64,11 +64,11 @@
 }
 
 .cocktail .card {
-  background: linear-gradient(to right, #35e5a0 0%, #35aae1 80%, #367aff 100%) !important;
+  background: linear-gradient(to right, #86ff94 0%, #99e265 40%, #35e5a0 80%) !important;
 }
 
 .blackyak .card {
-   background: linear-gradient(to right, #00897B 0%, #00897B 30%, #00C853 100%) !important;
+   /* background: linear-gradient(to right, #00897B 0%, #00897B 30%, #00C853 100%) !important; */
 }
 
 /*******************
